--- a/package.json
+++ b/package.json
@@ -17,10 +17,30 @@
   "author": "Gleb Bahmutov <gleb@cypress.io>",
   "license": "ISC",
   "devDependencies": {
-    "ok-file": "1.5.2"
+    "@babel/core": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "@cypress/react": "^6.2.0",
+    "@cypress/webpack-dev-server": "^2.3.0",
+    "@cypress/webpack-preprocessor": "^5.12.2",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "cypress": "^10.8.0",
+    "html-webpack-plugin": "^5.5.0",
+    "ok-file": "1.5.2",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/cypress-io/cypress-test-tiny.git"
+  },
+  "dependencies": {
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
 }
